# robodash

./: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
patches/: ntcore-ts-client+0.2.1.patch
src/: +layout.js  app.d.ts  app.html  hooks.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  mushroom_types.rs  test.rs
src-tauri/src/datalog/: commands.rs  handler.rs
src-tauri/src/networktable/: commands.rs  handler.rs  mod.rs
src/lib/: config.ts  widgets.ts
src/lib/config/: ConfigPanel.svelte  DataSelector.svelte
src/lib/form/: DataVariableChip.svelte  DataVariableTextInput.svelte  InputChip.svelte  NTChipDnd.ts
src/lib/select/: SelectionLayer.svelte  WidgetWrapper.svelte  svelte-grid.d.ts
src/lib/util/: NT.js  NT.ts
src/lib/widgets/: Camera.widget.svelte  Chooser.widget.svelte  FMSInfo.widget.svelte  Gyro.widget.svelte  Timer.widget.svelte
src/routes/: +layout.svelte  +page.svelte
